--- a/task/buildah-remote-oci-ta/0.4/buildah-remote-oci-ta.yaml
+++ b/task/buildah-remote-oci-ta/0.4/buildah-remote-oci-ta.yaml
@@ -57,6 +57,11 @@ spec:
     name: BUILD_ARGS_FILE
     type: string
   - default: ""
+    description: Defines the single build time for all buildah builds in seconds since
+      UNIX epoch
+    name: BUILD_TIMESTAMP
+    type: string
+  - default: ""
     description: The Trusted Artifact URI pointing to the artifact with the prefetched
       dependencies.
     name: CACHI2_ARTIFACT
@@ -233,6 +238,8 @@ spec:
       value: $(params.ANNOTATIONS_FILE)
     - name: BUILD_ARGS_FILE
       value: $(params.BUILD_ARGS_FILE)
+    - name: BUILD_TIMESTAMP
+      value: $(params.BUILD_TIMESTAMP)
     - name: CONTEXT
       value: $(params.CONTEXT)
     - name: ENTITLEMENT_SECRET
@@ -685,12 +692,20 @@ spec:
       fi
 
       DEFAULT_LABELS=(
-        "--label" "build-date=$(date -u +'%Y-%m-%dT%H:%M:%S')"
         "--label" "architecture=$(uname -m)"
         "--label" "vcs-type=git"
       )
       [ -n "$COMMIT_SHA" ] && DEFAULT_LABELS+=("--label" "vcs-ref=$COMMIT_SHA")
       [ -n "$IMAGE_EXPIRES_AFTER" ] && DEFAULT_LABELS+=("--label" "quay.expires-after=$IMAGE_EXPIRES_AFTER")
+      BUILD_TIMESTAMP_RFC3339=""
+      if [ -n "$BUILD_TIMESTAMP" ]; then
+        BUILD_TIMESTAMP_RFC3339=$(date -u -d "@$BUILD_TIMESTAMP" +'%Y-%m-%dT%H:%M:%SZ')
+        DEFAULT_LABELS+=("--label" "build-date=${BUILD_TIMESTAMP_RFC3339}")
+        DEFAULT_LABELS+=("--label" "org.opencontainers.image.created=${BUILD_TIMESTAMP_RFC3339}")
+        ANNOTATIONS+=("--annotation" "org.opencontainers.image.created=${BUILD_TIMESTAMP_RFC3339}")
+      else
+        DEFAULT_LABELS+=("--label" "build-date=$(date -u +'%Y-%m-%dT%H:%M:%SZ')")
+      fi
 
       # Concatenate defaults and explicit labels. If a label appears twice, the last one wins.
       LABELS=("${DEFAULT_LABELS[@]}" "${LABELS[@]}")
@@ -867,6 +882,7 @@ spec:
           -e ADD_CAPABILITIES="${ADD_CAPABILITIES@Q}" \
           -e ANNOTATIONS_FILE="${ANNOTATIONS_FILE@Q}" \
           -e BUILD_ARGS_FILE="${BUILD_ARGS_FILE@Q}" \
+          -e BUILD_TIMESTAMP="${BUILD_TIMESTAMP@Q}" \
           -e CONTEXT="${CONTEXT@Q}" \
           -e ENTITLEMENT_SECRET="${ENTITLEMENT_SECRET@Q}" \
           -e HERMETIC="${HERMETIC@Q}" \
