add @a-ovchinnikov to CODEOWNERS for prefetch task
Signed-off-by: Taylor Madore <tmadore@redhat.com>

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -35,8 +35,8 @@
 /task/upload-sbom-to-trustification         @konflux-ci/build-maintainers @Allda @jedinym
 
 # renovate groupName=build-prefetch
-/task/prefetch-dependencies         @konflux-ci/build-maintainers @brunoapimentel @eskultety @taylormadore
-/task/prefetch-dependencies-oci-ta  @konflux-ci/build-maintainers @brunoapimentel @eskultety @taylormadore
+/task/prefetch-dependencies         @konflux-ci/build-maintainers @a-ovchinnikov @brunoapimentel @eskultety @taylormadore
+/task/prefetch-dependencies-oci-ta  @konflux-ci/build-maintainers @a-ovchinnikov @brunoapimentel @eskultety @taylormadore
 
 # renovate groupName=build
 /task/generate-labels   @konflux-ci/build-maintainers @ralphbean
