fix(KONFLUX-9486): Support generating SBOMs for multistage builds.
Signed-off-by: Marek Szymutko <mszymutk@redhat.com>

--- a/task/buildah-remote-oci-ta/0.4/buildah-remote-oci-ta.yaml
+++ b/task/buildah-remote-oci-ta/0.4/buildah-remote-oci-ta.yaml
@@ -1013,6 +1013,10 @@ spec:
         mobster_args+=(--from-hermeto "/var/workdir/sbom-cachi2.json")
       fi
 
+      if [ -n "${TARGET_STAGE}" ]; then
+        mobster_args+=(--dockerfile-target "${TARGET_STAGE}")
+      fi
+
       for ADDITIONAL_BASE_IMAGE in "${ADDITIONAL_BASE_IMAGES[@]}"; do
         mobster_args+=(--additional-base-image "$ADDITIONAL_BASE_IMAGE")
       done
