fix: FBC does not need to generate SBOMs
FBC fragments are not used on their own, instead the catalog is
extracted from them and pushed to production. Since we don't use the
SBOM, we can just not produce it.

Signed-off-by: arewm <arewm@users.noreply.github.com>

--- a/pipelines/fbc-builder/fbc-builder.yaml
+++ b/pipelines/fbc-builder/fbc-builder.yaml
@@ -181,6 +181,8 @@ spec:
       value: $(tasks.prefetch-dependencies.results.CACHI2_ARTIFACT)
     - name: IMAGE_APPEND_PLATFORM
       value: "true"
+    - name: SKIP_SBOM_GENERATION
+      value: "true"
     runAfter:
     - clone-repository
     taskRef:
