--- a/pipelines/fbc-builder/patch.yaml
+++ b/pipelines/fbc-builder/patch.yaml
@@ -101,6 +101,11 @@
 - op: remove           # build-images -> PRIVILEGED_NESTED
   path: /spec/tasks/3/params/9
 - op: add
+  path: /spec/tasks/3/params/-
+  value:
+    name: SKIP_SBOM_GENERATION
+    value: "true"
+- op: add
   path: /spec/tasks/-
   value:
     name: validate-fbc
