Reformat renovate.json by generate-everything
Signed-off-by: Chenxiong Qi <cqi@redhat.com>

--- a/renovate.json
+++ b/renovate.json
@@ -241,10 +241,13 @@
       "matchFileNames": [
         "task/**"
       ],
-      "matchManagers": ["regex"],
-      "matchPackageNames": ["quay.io/konflux-ci/mobster"]
+      "matchManagers": [
+        "regex"
+      ],
+      "matchPackageNames": [
+        "quay.io/konflux-ci/mobster"
+      ]
     }
-
   ],
   "postUpdateOptions": [
     "gomodTidy"
