Remove matrix for clamav-scan task if present
Currently, Conforma doesn't process `IMAGES_PROCESSED` results correctly
when matrix is used in a PipelineRun (see [1]). Therefore, the matrix
section for clamav-scan is removed from the multi-arch PipelineRun, and
the migration script is updated to remove the matrix section from
user existing PipelineRuns if presents.

Signed-off-by: Zhiming Xiong <zxiong@redhat.com>

--- a/pipelines/docker-build-multi-platform-oci-ta/docker-build-multi-platform-oci-ta.yaml
+++ b/pipelines/docker-build-multi-platform-oci-ta/docker-build-multi-platform-oci-ta.yaml
@@ -319,12 +319,7 @@ spec:
       values:
       - "false"
     workspaces: []
-  - matrix:
-      params:
-      - name: image-arch
-        value:
-        - $(params.build-platforms)
-    name: clamav-scan
+  - name: clamav-scan
     params:
     - name: image-digest
       value: $(tasks.build-image-index.results.IMAGE_DIGEST)
