--- a/task/source-build-oci-ta/0.2/source-build-oci-ta.yaml
+++ b/task/source-build-oci-ta/0.2/source-build-oci-ta.yaml
@@ -4,6 +4,7 @@ kind: Task
 metadata:
   name: source-build-oci-ta
   annotations:
+    build.appstudio.redhat.com/expires-on: "2025-08-12T00:00:00Z"
     tekton.dev/pipelines.minVersion: 0.12.1
     tekton.dev/tags: konflux
   labels:
