--- a/task/source-build/0.2/source-build.yaml
+++ b/task/source-build/0.2/source-build.yaml
@@ -6,6 +6,7 @@ metadata:
   labels:
     app.kubernetes.io/version: "0.2"
   annotations:
+    build.appstudio.redhat.com/expires-on: "2025-08-12T00:00:00Z"
     tekton.dev/pipelines.minVersion: "0.12.1"
     tekton.dev/tags: "konflux"
 spec:
