--- a/task/prefetch-dependencies/0.2/prefetch-dependencies.yaml
+++ b/task/prefetch-dependencies/0.2/prefetch-dependencies.yaml
@@ -337,10 +337,12 @@ spec:
 
       # Some repos with go submodules would fail during prefetch dependencies task
       # Forcing fetching tags serves as a workaround
-      if [[ "$(cd "$(workspaces.source.path)/source" && ! git fetch --tags)" ]]; then
-        echo "Retrying fetch command..."
-        "$(cd "$(workspaces.source.path)/source" && git fetch --tags)"
+      export RETRY_MAX_TRIES=2
+      WORKSPACE_SOURCE="$(workspaces.source.path)/source"
+      if ! (cd "$WORKSPACE_SOURCE" && retry git fetch --tags); then
+        exit 1
       fi
+      unset RETRY_MAX_TRIES
 
       cachi2 --log-level="$LOG_LEVEL" $config_flag fetch-deps \
       $dev_pacman_flag \
