Add package-operator package build task and pipeline

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -133,6 +133,10 @@
 # renovate groupName=ko-builder
 /task/ko-oci-ta @ggallen @vdemeester @arewm @skoved @rh-hemartin @maruiz93
 
+# renovate groupName=package-operator
+/task/package-operator-package        @eqrx @erdii
+/task/package-operator-package-oci-ta @eqrx @erdii
+
 # These are auto-generated and often require changes when tasks change.
 # Allow anyone with write access to approve the changes.
 /pipelines/*/README.md
