--- a/renovate.json
+++ b/renovate.json
@@ -262,6 +262,13 @@
       "matchFileNames": [
         "task/ko-oci-ta/**"
       ]
+    },
+    {
+      "groupName": "package-operator",
+      "matchFileNames": [
+        "task/package-operator-package-oci-ta/**",
+        "task/package-operator-package/**"
+      ]
     }
   ],
   "postUpdateOptions": [
