Add needed volume mounts for certs.

--- a/task/ecosystem-cert-preflight-checks/0.2/ecosystem-cert-preflight-checks.yaml
+++ b/task/ecosystem-cert-preflight-checks/0.2/ecosystem-cert-preflight-checks.yaml
@@ -58,6 +58,11 @@ spec:
           description: |
             The process that sets the artifact type. Informational.
             Values from: introspection, parameter.
+      volumeMounts:
+        - mountPath: /etc/pki/tls/certs/ca-custom-bundle.crt
+          name: trusted-ca
+          readOnly: true
+          subPath: ca-bundle.crt
       env:
       - name: PARAM_ARTIFACT_TYPE
         value: $(params.artifact-type)
