--- a/task/sast-snyk-check-oci-ta/0.4/recipe.yaml
+++ b/task/sast-snyk-check-oci-ta/0.4/recipe.yaml
@@ -10,3 +10,4 @@ replacements:
   workspaces.workspace.path: /var/workdir
 regexReplacements:
   hacbs/\$\(context.task.name\): source
+useTAVolumeMount: true
