Set remove_originals to true
This is how it is normally called in production.

--- a/task/modelcar-oci-ta/0.1/tests/test-modelcar-oci-ta-happy-path.yaml
+++ b/task/modelcar-oci-ta/0.1/tests/test-modelcar-oci-ta-happy-path.yaml
@@ -110,7 +110,7 @@ spec:
         - name: MODELCARD_PATH
           value: "/var/workdir/models/source/modelcard.yaml"
         - name: REMOVE_ORIGINALS
-          value: "false"
+          value: "true"
         - name: MODEL_IMAGE_AUTH
           value: "dummy-secret"
         - name: caTrustConfigMapName
